# ds-register

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  example_deepseek.py  import_tokens_to_sqlite.py  main.py  pyproject.toml  report-2026-05-01.md  requirements.txt  test_pow_simple.py
.trellis/: .template-hashes.json
.trellis/spec/backend/: api-endpoints.md  database-guidelines.md  directory-structure.md  error-handling.md  index.md  integration-guidelines.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-01-research-ds2api-upload/: task.json
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-05/05-01-deepseek/: DEEPSEEK_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUALITY_CHECK_REPORT.md  check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-01-deepseek/05-01-deepseek/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-01-deepseek/research/: ds2api-upload.md
.trellis/tasks/archive/2026-05/05-01-research-ds2api-upload/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-02-readme/: prd.md  task.json
.trellis/workspace/okamitimo233/: index.md  journal-1.md
core/: __init__.py  deepseek_register.py  granian_reload.py  local_tokens.py  logger.py  mail_providers.py  pool_maintainer.py  register.py  runtime_settings.py  server.py  token_health.py
static/: app.js  index.html  style.css
tests/: test_deepseek_pow.py
