[project]
name = "openai-pool-orchestrator"
version = "2.0.0"
description = "OpenAI 账号池编排器 — 自动化注册、Token 管理与多平台账号池维护"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["openai", "account-pool", "automation", "token-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.110",
    "granian[reload,pname]==2.5.2",
    "curl-cffi>=0.6",
    "aiohttp>=3.9",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "numba>=0.59.0",
]

[project.scripts]
openai-pool = "openai_pool_orchestrator.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openai_pool_orchestrator*"]

[tool.setuptools.package-data]
openai_pool_orchestrator = ["static/**/*"]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=9.0.2"]
